fix: Override main div height to enable overflow

--- a/packages/online/src/main.less
+++ b/packages/online/src/main.less
@@ -6,6 +6,8 @@
 @pf-padding: @grid-gutter-width / 2;
 
 #main {
+  height: unset;
+  min-height: 100%;
   background-color: @color-pf-black-150;
 }
 
